# recosante

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .pylintrc  .releaserc.js  .yarnrc.yml  CHANGELOG.md  LICENSE  README.md  TODO.md  api-requirements.txt  docker-compose.yml  indice--requirements.txt  package-lock.json  package.json  pyrightconfig.json  seed-schemas.sql  seeds.sql  sentry-implementation.md  update_monorepo.sh
api/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Procfile  README.md  README_CELERY.md  build.sh  check_newsletter.py  docker-compose.yml  package.json  poetry.toml  pyproject.toml  requirements.txt  run_task.py  run_test_indices_worker.sh  seed-public_recommandations.sql  send_newsletter.py  setup.cfg  setup.py  start_all.sh  start_all_local.sh  start_beat.sh  start_celery.sh  start_db.sh  start_lint.sh  start_tests.sh  startup.sh  startup_indice_pollution_migration.sh  startup_multidatabases.sh  startup_tests.sh  test_env.py  test_indice_uv_save_all.py  test_indices.py  test_indices_uv.py  test_indices_uv_celery.py  test_save_all_indices.py  test_save_all_indices_uv.py  test_save_indicator.py  (+4 more)
api/.github/workflows/: deploy_to_clever.yml
api/clevercloud/: cron.json
api/ecosante/: __init__.py  celery_worker.py  extensions.py
api/ecosante/api/: baignades.py  blueprint.py
api/ecosante/inscription/: models.py
api/ecosante/newsletter/: blueprint.py
api/ecosante/pages/: blueprint.py
api/ecosante/recommandations/: blueprint.py  commands.py  models.py
api/ecosante/stats/: blueprint.py  stats_script.py
api/ecosante/tasks/: __init__.py  import_from_production.py  inscriptions_patients.py  send_admin_link.py
api/ecosante/templates/: _formhelpers.html  base.html  base_admin.html  base_admin_form.html  base_form.html
api/ecosante/users/: blueprint.py
api/ecosante/utils/: __init__.py  authenticator.py  blueprint.py  cache.py  custom_fields.py  decorators.py  form.py  funcs.py  healthchecksio.py  rollup.py  send_log_mail.py  tests.py
api/migrations/: README  alembic.ini  env.py
api/migrations/data/: generate-random-short-id.sql  nouvelles-communes-2021.csv
api/migrations/versions/: 017e76d92cfb_suppression_de_l_accent_à_ménage.py  0502b381ec96_suppression_filtre_moyen.py  0605112d05c5_translate_objectifs.py  07e6a2b58cb7_ajout_recommandations.py  08bb5d4e3455_modification_villes.py  0957de655d70_champ_potentiel_radon_multiple.py  0d171dd6cb43_suppression_reommandation_medias.py  0e4285fb2929_add_newsletter_history.py  104f38f05d5b_ajout_index_sur_newsletter_inscription_.py  110acb48f900_ajout_recommandation_vigilance_couleur_.py  136175aae0bb_suppression_recommandation_autres_.py  17a61f048f42_conversion_recommandation_en_markdown.py  1a1ec28e5d13_ajout_recommandation_episodes_à_.py  1a52f7feda78_suppression_doute_recommandabilite.py  1c7b2c3e05c5_ajout_radon_dans_la_newsletter.py  1d82053b1e7a_recommandation_type_indice_atmo_vers_.py  20484ad297c7_ajout_potentiel_radon_dans_les_.py  20b84cf5a91f_automne_hiver_categorie_objectif_columns.py  25116bbd585c_ajout_enum.py  28165a6ada0d_ajout_inscription_cache_api_commune.py  28ca23dcd7a4_ajout_mail_list_id_dans_newsletter.py  2d010b0aa766_ajouts_types.py  32a122ad6971_ajout_période_de_validité_à_newsletter_.py  37b15063d1c7_ajout_recommandation_indice_uv.py  3853692e5a9f_remove_allergie_from_recommandation.py  39b93da1a802_ajout_webpush_subscription_info.py  39ed6dfe1eff_ajout_sous_indices_dans_la_newsletter.py  3dfc4940599e_ajout_qualif_aux_newsletters.py  50ec124dbbfc_init.py  (+77 more)
api/tests/: conftest.py  test_api.py  test_authentication.py  test_inscription.py  test_newsletter.py  test_newsletter_alerte.py  test_newsletter_hedbo.py  test_newsletter_quotidien.py  test_recommandation.py  test_send_notifications.py  test_users.py  utils.py
indice_pollution/: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  call_save_indices.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  start_all.sh  start_beat.sh  start_celery.sh  startup.sh  wsgi.ini  wsgi.py
indice_pollution/indice_pollution/: __init__.py  api.py  autocomplete.py  celery_worker.py  db.py  helpers.py
indice_pollution/migrations/: env.py
libs/indice_pollution/: .dockerignore  .env.docker  .env.example  Dockerfile  README.md  call_all_tasks.py  call_save_indices.sh  package.json  pyproject.toml  requirements.txt  save_today.py  start_all.sh  start_all_local.sh  start_beat.sh  start_celery.sh  start_db.sh  start_lint.sh
(+1184 files in other folders)
