[tool.poetry]
name = "ecosante"
version = "0.1.0"
description = "recosante.beta.gouv.fr"
authors = ["Fabrique des ministères sociaux"]

[tool.poetry.dependencies]
python = "^3.9"
amqp = "5.1.1"
celery = "5.2.7"
celery-redbeat = "2.1.0"
cryptography = "42.0.0"
email-validator = "2.0.0.post2"
faker = "18.9.0"
flask = "2.3.2"
flask-assets = "2.0"
flask-caching = "2.0.2"
flask-cors = "3.0.10"
flask-manage-webpack = "1.4.1"
flask-migrate = "4.0.4"
flask-rebar = "2.4.0"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.1.1"
html2text = "2020.1.16"
icalevents = "0.1.25"
idna = "2.10"
indice_pollution = {path = "../libs/indice_pollution", develop = true}
kombu = "5.2.4"
markdown = "3.4.3"
markdown-link-attr-modifier = "0.2.1"
openpyxl = "3.1.2"
psycopg2 = "2.9.6"
py-vapid = "1.9.0"
python-jose = "3.3.0"
pywebpush = "1.14.0"
redis = "4.5.5"
requests = "2.31.0"
sentry-sdk = "2.8.0"
sib-api-v3-sdk = "7.6.0"
sqlalchemy = "1.4.48"
uwsgi = "2.0.22"
werkzeug = "2.3.4"
wtforms = "3.0.1"
typing-extensions = "4.6.2"
setuptools = "67.8.0"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
pytest-alembic = "0.10.5"
pytest-flask-sqlalchemy = "1.1.0"
pytest-mock = "3.10.0"
pytest-postgresql = "5.0.0"
requests-mock = "1.10.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[tool.pytest]
testpaths = "tests"
mocked-sessions = "ecosante.extensions.db.session indice_pollution.db.session"
