[tool.poetry]
name = "indice_pollution"
version = "1.0"
description = "API giving air pollution level in France"
authors = ["Fabrique des ministères sociaux"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.13.1"
beautifulsoup4 = "4.12.2"
celery = "5.3.6"
celery-redbeat = "2.2.0"
flask = "2.3.2"
html5lib = "1.1"
orjson = "3.8.14"
pkginfo = "1.10.0"
psycopg2-binary = "2.9.6"
python-dateutil = "2.9.0.post0"
pytz = "2023.4"
redis = "4.6.0"
requests = "2.31.0"
sentry-sdk = "1.44.0"
sqlalchemy = "1.4.48"
unidecode = "1.3.6"
uwsgi = "2.0.21"
typing-extensions = "4.10.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
