[tool.poetry]
name = "indice_pollution"
version = "1.0"
description = "API giving air pollution level in France"
authors = ["Fabrique des ministères sociaux"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.11.1"
beautifulsoup4 = "4.12.2"
celery = "5.2.7"
celery-redbeat = "2.1.0"
flask = "2.3.2"
html5lib = "1.1"
orjson = "3.8.14"
pkginfo = "1.9.6"
psycopg2-binary = "2.9.6"
python-dateutil = "2.8.2"
pytz = "2023.3"
redis = "4.5.5"
requests = "2.32.2"
sentry-sdk = "1.24.0"
sqlalchemy = "1.4.48"
unidecode = "1.3.6"
uwsgi = "2.0.22"
typing-extensions = "4.6.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
