[tool.poetry]
name = "indice_pollution"
version = "1.0"
description = "API giving air pollution level in France"
authors = ["Fabrique des ministères sociaux"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.16.2"
beautifulsoup4 = "4.13.4"
celery = "5.5.3"
celery-redbeat = "2.3.2"
flask = "2.3.2"
html5lib = "1.1"
orjson = "3.8.14"
pkginfo = "1.12.1.2"
psycopg2-binary = "2.9.6"
python-dateutil = "2.9.0.post0"
pytz = "2023.4"
redis = "4.6.0"
requests = "2.32.4"
sentry-sdk = "1.45.1"
sqlalchemy = "1.4.48"
unidecode = "1.4.0"
uwsgi = "2.0.22"
typing-extensions = "4.14.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
